Refactor AsideAndMain component to handle window resize events and update CSS for improved styling

--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,6 @@
   }
 
   .elemento {
-    @apply text-white hover:text-gray-50 border-l font-semibold py-1 px-5;
+    @apply text-white hover:text-gray-50 border-l font-semibold py-1 px-5 text-lg;
   }
 }
